[WKHTTPCookieStore getAllCookies] returns inconsistent creation time https://bugs.webkit.org/show_bug.cgi?id=185041 <rdar://problem/34684214>

Patch by Sihui Liu <sihui_liu@apple.com> on 2018-05-08
Reviewed by Geoffrey Garen.

Source/WebCore:

Set creationtime property when creating Cookie object to keep consistency after conversion.

New API test: WebKit.WKHTTPCookieStoreCreationTime.

* platform/network/cocoa/CookieCocoa.mm:
(WebCore::Cookie::operator NSHTTPCookie * const):

Tools:

Add API test Coverage.

* TestWebKitAPI/Tests/WebKitCocoa/WKHTTPCookieStore.mm:
(TEST):

Canonical link: https://commits.webkit.org/200892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231491 268f45cc-cd09-0410-ab3c-d52691b4dbfc